--- a/package.json
+++ b/package.json
@@ -6,14 +6,23 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop",
+    "develop": "gatsby clean && gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
+    "@urbica/react-map-gl": "^1.12.1",
+    "apollo-boost": "^0.4.4",
+    "apollo-link-http": "^1.5.16",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.17.6",
+    "gatsby-source-graphql": "^2.1.21",
+    "graphql-tag": "^2.10.1",
+    "isomorphic-fetch": "^2.2.1",
+    "mapbox-gl": "^1.5.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0"
   },
