--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "apollo-link-http": "^1.5.16",
     "dotenv": "^8.2.0",
     "gatsby": "^2.17.6",
+    "gatsby-plugin-react-helmet": "^3.1.13",
     "gatsby-source-graphql": "^2.1.21",
     "graphql-tag": "^2.10.1",
     "isomorphic-fetch": "^2.2.1",
     "mapbox-gl": "^1.5.0",
     "react": "^16.11.0",
-    "react-dom": "^16.11.0"
+    "react-dom": "^16.11.0",
+    "react-helmet": "^5.2.1"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
